# pets

./: .gitignore  Cargo.toml  README.md  build.rs  commands.gdb  device.x  memory.x  pets.sublime-project  qemu_run.sh
.cargo/: config.toml
.github/workflows/: build.yml  clippy.yml  format.yml  test.yml
examples/: .gitignore  Cargo.toml  build.rs  memory_mps2tz.x  qemu_run_mps2tz.sh
examples/.cargo/: config.toml
examples/reference/: ci-check-thumbv6m-none-eabi.txt  ci-check-thumbv7em-none-eabi.txt  ci-check-thumbv7em-none-eabihf.txt  ci-check-thumbv7m-none-eabi.txt  ci-check-thumbv8m.base-none-eabi.txt  ci-check-thumbv8m.main-none-eabi.txt  ci-check-thumbv8m.main-none-eabihf.txt
examples/src/: lib.rs
src/: lib.rs  scheduler.rs  stack.rs  stack_pusher.rs  task.rs
src/asm/: eabi.rs  eabi_v6.rs  eabihf.rs  mod.rs
