# Copyright (c) 2025 Ferrous Systems
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
authors = ["Jonathan Pallant <jonathan.pallant@ferrous-systems.com>"]
edition = "2024"
license = "GPL-3.0-or-later"
name = "pets"
readme = "README.md"
repository = "https://github.com/jonathanpallant/pets"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
defmt = "1.0.1"

[build-dependencies]
# arm-targets = "0.2.0"
arm-targets = { git = "https://github.com/thejpster/cortex-ar", rev="988d28712ef06614accacabd4c8990f85ab6c04a" }
