# Copyright (c) 2025 Ferrous Systems
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
authors = ["Jonathan Pallant <jonathan.pallant@ferrous-systems.com>"]
edition = "2024"
license = "GPL-3.0-or-later"
name = "pets-examples"
readme = "README.md"
repository = "https://github.com/jonathanpallant/pets"
version = "0.1.0"
default-run = "example1"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-semihosting = "0.3.0"
heapless = "0.9.1"
pets = { path = ".." }
semihosting = "0.1.20"

[profile.release]
debug = 2

[build-dependencies]
# arm-targets = "0.2.0"
arm-targets = { git = "https://github.com/thejpster/cortex-ar", rev = "988d28712ef06614accacabd4c8990f85ab6c04a" }
